Bug 101471 - Mesa fails to build: unknown typename bool
Summary: Mesa fails to build: unknown typename bool
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-06-16 18:43 UTC by Gregor Münch
Modified: 2017-06-17 11:40 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Gregor Münch 2017-06-16 18:43:56 UTC
In file included from common/ac_surface.c:31:0:
common/ac_gpu_info.h:57:2: Fehler: unbekannter Typname: »bool«
  bool                        has_dedicated_vram;
  ^~~~
common/ac_gpu_info.h:58:2: Fehler: unbekannter Typname: »bool«
  bool                        has_virtual_memory;
  ^~~~
common/ac_gpu_info.h:59:2: Fehler: unbekannter Typname: »bool«
  bool                        gfx_ib_pad_with_type2;
  ^~~~
common/ac_gpu_info.h:60:2: Fehler: unbekannter Typname: »bool«
  bool                        has_hw_decode;
  ^~~~
common/ac_gpu_info.h:76:2: Fehler: unbekannter Typname: »bool«
  bool                        has_userptr;
  ^~~~
common/ac_gpu_info.h:89:2: Fehler: unbekannter Typname: »bool«
  bool                        r600_gb_backend_map_valid;
  ^~~~
common/ac_gpu_info.h:101:1: Fehler: Unbekannter Typname »bool«; meinten Sie »_Bool«?
 bool ac_query_gpu_info(int fd, amdgpu_device_handle dev,
 ^~~~
 _Bool
In file included from common/ac_surface.c:38:0:
/usr/include/libdrm/amdgpu.h:107:31: Fehler: In Konflikt stehende Typen für »amdgpu_device_handle«
 typedef struct amdgpu_device *amdgpu_device_handle;
                               ^~~~~~~~~~~~~~~~~~~~
In file included from common/ac_surface.c:31:0:
common/ac_gpu_info.h:36:16: Anmerkung: Vorherige Deklaration von »amdgpu_device_handle« war hier
 typedef void * amdgpu_device_handle;
                ^~~~~~~~~~~~~~~~~~~~
make[4]: *** [Makefile:944: common/common_libamd_common_la-ac_surface.lo] Fehler 1
make[4]: *** Es wird auf noch nicht beendete Prozesse gewartet....
ar: `u' modifier ignored since `D' is the default (see `U')
In file included from common/ac_gpu_info.c:26:0:
common/ac_gpu_info.h:41:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    pci_domain;
  ^~~~~~~~
common/ac_gpu_info.h:42:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    pci_bus;
  ^~~~~~~~
common/ac_gpu_info.h:43:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    pci_dev;
  ^~~~~~~~
common/ac_gpu_info.h:44:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    pci_func;
  ^~~~~~~~
common/ac_gpu_info.h:47:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    pci_id;
  ^~~~~~~~
common/ac_gpu_info.h:50:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    pte_fragment_size;
  ^~~~~~~~
common/ac_gpu_info.h:51:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    gart_page_size;
  ^~~~~~~~
common/ac_gpu_info.h:52:2: Fehler: unbekannter Typname: »uint64_t«
  uint64_t                    gart_size;
  ^~~~~~~~
common/ac_gpu_info.h:53:2: Fehler: unbekannter Typname: »uint64_t«
  uint64_t                    vram_size;
  ^~~~~~~~
common/ac_gpu_info.h:54:2: Fehler: unbekannter Typname: »uint64_t«
  uint64_t                    vram_vis_size;
  ^~~~~~~~
common/ac_gpu_info.h:55:2: Fehler: unbekannter Typname: »uint64_t«
  uint64_t                    max_alloc_size;
  ^~~~~~~~
common/ac_gpu_info.h:56:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    min_alloc_size;
  ^~~~~~~~
common/ac_gpu_info.h:57:2: Fehler: unbekannter Typname: »bool«
  bool                        has_dedicated_vram;
  ^~~~
common/ac_gpu_info.h:58:2: Fehler: unbekannter Typname: »bool«
  bool                        has_virtual_memory;
  ^~~~
common/ac_gpu_info.h:59:2: Fehler: unbekannter Typname: »bool«
  bool                        gfx_ib_pad_with_type2;
  ^~~~
common/ac_gpu_info.h:60:2: Fehler: unbekannter Typname: »bool«
  bool                        has_hw_decode;
  ^~~~
common/ac_gpu_info.h:61:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    num_sdma_rings;
  ^~~~~~~~
common/ac_gpu_info.h:62:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    num_compute_rings;
  ^~~~~~~~
common/ac_gpu_info.h:63:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    uvd_fw_version;
  ^~~~~~~~
common/ac_gpu_info.h:64:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    vce_fw_version;
  ^~~~~~~~
common/ac_gpu_info.h:65:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    me_fw_version;
  ^~~~~~~~
common/ac_gpu_info.h:66:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    pfp_fw_version;
  ^~~~~~~~
common/ac_gpu_info.h:67:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    ce_fw_version;
  ^~~~~~~~
common/ac_gpu_info.h:68:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    vce_harvest_config;
  ^~~~~~~~
common/ac_gpu_info.h:69:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    clock_crystal_freq;
  ^~~~~~~~
common/ac_gpu_info.h:70:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    tcc_cache_line_size;
  ^~~~~~~~
common/ac_gpu_info.h:73:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    drm_major; /* version */
  ^~~~~~~~
common/ac_gpu_info.h:74:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    drm_minor;
  ^~~~~~~~
common/ac_gpu_info.h:75:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    drm_patchlevel;
  ^~~~~~~~
common/ac_gpu_info.h:76:2: Fehler: unbekannter Typname: »bool«
  bool                        has_userptr;
  ^~~~
common/ac_gpu_info.h:79:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    r600_max_quad_pipes; /* wave size / 16 */
  ^~~~~~~~
common/ac_gpu_info.h:80:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    max_shader_clock;
  ^~~~~~~~
common/ac_gpu_info.h:81:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    num_good_compute_units;
  ^~~~~~~~
common/ac_gpu_info.h:82:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    max_se; /* shader engines */
  ^~~~~~~~
common/ac_gpu_info.h:83:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    max_sh_per_se; /* shader arrays per shader engine */
  ^~~~~~~~
common/ac_gpu_info.h:86:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    r300_num_gb_pipes;
  ^~~~~~~~
common/ac_gpu_info.h:87:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    r300_num_z_pipes;
  ^~~~~~~~
common/ac_gpu_info.h:88:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    r600_gb_backend_map; /* R600 harvest config */
  ^~~~~~~~
common/ac_gpu_info.h:89:2: Fehler: unbekannter Typname: »bool«
  bool                        r600_gb_backend_map_valid;
  ^~~~
common/ac_gpu_info.h:90:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    r600_num_banks;
  ^~~~~~~~
common/ac_gpu_info.h:91:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    num_render_backends;
  ^~~~~~~~
common/ac_gpu_info.h:92:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    num_tile_pipes; /* pipe count from PIPE_CONFIG */
  ^~~~~~~~
common/ac_gpu_info.h:93:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    pipe_interleave_bytes;
  ^~~~~~~~
common/ac_gpu_info.h:94:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    enabled_rb_mask; /* GCN harvest config */
  ^~~~~~~~
common/ac_gpu_info.h:97:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    si_tile_mode_array[32];
  ^~~~~~~~
common/ac_gpu_info.h:98:2: Fehler: unbekannter Typname: »uint32_t«
  uint32_t                    cik_macrotile_mode_array[16];
  ^~~~~~~~
common/ac_gpu_info.h:101:1: Fehler: Unbekannter Typname »bool«; meinten Sie »_Bool«?
 bool ac_query_gpu_info(int fd, amdgpu_device_handle dev,
 ^~~~
 _Bool
In file included from common/ac_gpu_info.c:37:0:
/usr/include/libdrm/amdgpu.h:107:31: Fehler: In Konflikt stehende Typen für »amdgpu_device_handle«
 typedef struct amdgpu_device *amdgpu_device_handle;
                               ^~~~~~~~~~~~~~~~~~~~
In file included from common/ac_gpu_info.c:26:0:
common/ac_gpu_info.h:36:16: Anmerkung: Vorherige Deklaration von »amdgpu_device_handle« war hier
 typedef void * amdgpu_device_handle;
                ^~~~~~~~~~~~~~~~~~~~
common/ac_gpu_info.c:87:6: Fehler: In Konflikt stehende Typen für »ac_query_gpu_info«
 bool ac_query_gpu_info(int fd, amdgpu_device_handle dev,
      ^~~~~~~~~~~~~~~~~
In file included from common/ac_gpu_info.c:26:0:
common/ac_gpu_info.h:101:6: Anmerkung: Vorherige Deklaration von »ac_query_gpu_info« war hier
 bool ac_query_gpu_info(int fd, amdgpu_device_handle dev,
      ^~~~~~~~~~~~~~~~~
common/ac_gpu_info.c: In Funktion »ac_query_gpu_info«:
common/ac_gpu_info.c:171:6: Warnung: Zeigerziele bei Übergabe des Arguments 5 von »amdgpu_query_firmware_version« unterscheiden sich im Vorzeichenbesitz [-Wpointer-sign]
      &info->me_fw_version, &unused_feature);
      ^
In file included from common/ac_gpu_info.c:37:0:
/usr/include/libdrm/amdgpu.h:975:5: Anmerkung: »uint32_t * {alias unsigned int *}« erwartet, aber Argument hat Typ »int *«
 int amdgpu_query_firmware_version(amdgpu_device_handle dev, unsigned fw_type,
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
common/ac_gpu_info.c:178:6: Warnung: Zeigerziele bei Übergabe des Arguments 5 von »amdgpu_query_firmware_version« unterscheiden sich im Vorzeichenbesitz [-Wpointer-sign]
      &info->pfp_fw_version, &unused_feature);
      ^
In file included from common/ac_gpu_info.c:37:0:
/usr/include/libdrm/amdgpu.h:975:5: Anmerkung: »uint32_t * {alias unsigned int *}« erwartet, aber Argument hat Typ »int *«
 int amdgpu_query_firmware_version(amdgpu_device_handle dev, unsigned fw_type,
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
common/ac_gpu_info.c:185:6: Warnung: Zeigerziele bei Übergabe des Arguments 5 von »amdgpu_query_firmware_version« unterscheiden sich im Vorzeichenbesitz [-Wpointer-sign]
      &info->ce_fw_version, &unused_feature);
      ^
In file included from common/ac_gpu_info.c:37:0:
/usr/include/libdrm/amdgpu.h:975:5: Anmerkung: »uint32_t * {alias unsigned int *}« erwartet, aber Argument hat Typ »int *«
 int amdgpu_query_firmware_version(amdgpu_device_handle dev, unsigned fw_type,
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make[4]: *** [Makefile:937: common/common_libamd_common_la-ac_gpu_info.lo] Fehler 1
common/ac_nir_to_llvm.c: In Funktion »build_tex_intrinsic«:
common/ac_nir_to_llvm.c:2038:8: Warnung: »compare_cube_wa« könnte in dieser Funktion uninitialisiert verwendet werden [-Wmaybe-uninitialized]
    tmp = LLVMBuildSelect(ctx->builder, compare_cube_wa, tmp2, tmp, "");
    ~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
common/ac_nir_to_llvm.c:1939:15: Anmerkung: »compare_cube_wa« wurde hier deklariert
  LLVMValueRef compare_cube_wa;
               ^~~~~~~~~~~~~~~
common/ac_nir_to_llvm.c: In Funktion »visit_alu«:
common/ac_nir_to_llvm.c:1312:10: Warnung: »cond« könnte in dieser Funktion uninitialisiert verwendet werden [-Wmaybe-uninitialized]
   result = LLVMBuildSelect(ctx->builder, cond, ctx->f32zero, result, "");
   ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
common/ac_nir_to_llvm.c:1294:15: Anmerkung: »cond« wurde hier deklariert
  LLVMValueRef cond;
               ^~~~
common/ac_nir_to_llvm.c: In Funktion »visit_load_var«:
common/ac_nir_to_llvm.c:2680:10: Warnung: »stride« könnte in dieser Funktion uninitialisiert verwendet werden [-Wmaybe-uninitialized]
  dw_addr = get_dw_address(ctx, dw_addr, param, const_index, is_compact, vertex_index, stride,
  ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      indir_index);
      ~~~~~~~~~~~~
common/ac_nir_to_llvm.c:2660:24: Anmerkung: »stride« wurde hier deklariert
  LLVMValueRef dw_addr, stride;
                        ^~~~~~
common/ac_nir_to_llvm.c: In Funktion »visit_store_var«:
common/ac_nir_to_llvm.c:2728:10: Warnung: »stride« könnte in dieser Funktion uninitialisiert verwendet werden [-Wmaybe-uninitialized]
  dw_addr = get_dw_address(ctx, dw_addr, param, const_index, is_compact, vertex_index, stride,
  ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      indir_index);
      ~~~~~~~~~~~~
common/ac_nir_to_llvm.c:2699:15: Anmerkung: »stride« wurde hier deklariert
  LLVMValueRef stride, dw_addr;
               ^~~~~~
common/ac_nir_to_llvm.c: In Funktion »visit_cf_list.isra.33«:
common/ac_nir_to_llvm.c:3429:5: Warnung: Ausgabe der ».«-Direktive könnte abgeschnitten sein, beim Schreiben von 1 Byte in eine Region der Größe zwischen 0 und 5 [-Wformat-truncation=]
     "%s.%s.%s", base_name, atomic_name, coords_type);
     ^~~~~~~~~~
In file included from /usr/include/stdio.h:939:0,
                 from ../../src/compiler/nir_types.h:31,
                 from ../../src/compiler/nir/nir.h:39,
                 from common/ac_nir_to_llvm.c:29:
/usr/include/bits/stdio2.h:64:10: Anmerkung: »__builtin___snprintf_chk« gibt 29 oder mehr Bytes (angenommen 34) in das Ziel der Größe 32 aus
   return __builtin___snprintf_chk (__s, __n, __USE_FORTIFY_LEVEL - 1,
          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        __bos (__s), __fmt, __va_arg_pack ());
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
common/ac_nir_to_llvm.c:2350:15: Warnung: »results[0]« könnte in dieser Funktion uninitialisiert verwendet werden [-Wmaybe-uninitialized]
  LLVMValueRef ret = results[0];
               ^~~
common/ac_nir_to_llvm.c:3706:10: Warnung: »src_c1« könnte in dieser Funktion uninitialisiert verwendet werden [-Wmaybe-uninitialized]
    temp2 = LLVMBuildFMul(ctx->builder, ddy_el, src_c1, "");
    ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
common/ac_nir_to_llvm.c:3643:23: Anmerkung: »src_c1« wurde hier deklariert
  LLVMValueRef src_c0, src_c1;
                       ^~~~~~
common/ac_nir_to_llvm.c:3703:10: Warnung: »src_c0« könnte in dieser Funktion uninitialisiert verwendet werden [-Wmaybe-uninitialized]
    temp1 = LLVMBuildFMul(ctx->builder, ddx_el, src_c0, "");
    ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
common/ac_nir_to_llvm.c:3643:15: Anmerkung: »src_c0« wurde hier deklariert
  LLVMValueRef src_c0, src_c1;
               ^~~~~~
make[4]: Verzeichnis „/tmp/yaourt-tmp-greg/aur-lib32-mesa-git/src/mesa/src/amd“ wird verlassen
make[3]: *** [Makefile:739: all] Fehler 2
make[3]: Verzeichnis „/tmp/yaourt-tmp-greg/aur-lib32-mesa-git/src/mesa/src/amd“ wird verlassen
make[2]: *** [Makefile:851: all-recursive] Fehler 1
make[2]: Verzeichnis „/tmp/yaourt-tmp-greg/aur-lib32-mesa-git/src/mesa/src“ wird verlassen
make[1]: *** [Makefile:642: all] Fehler 2
make[1]: Verzeichnis „/tmp/yaourt-tmp-greg/aur-lib32-mesa-git/src/mesa/src“ wird verlassen
make: *** [Makefile:642: all-recursive] Fehler 1
Comment 1 Emil Velikov 2017-06-16 19:20:27 UTC
I've tracked it down and have some patches in which I'm double-checking.
Mind if I Cc you so you can confirm on your end?
Comment 2 Emil Velikov 2017-06-16 22:00:08 UTC
The following series should do it. Please let me know how if it helps on your end.

https://patchwork.freedesktop.org/series/25934/
Comment 3 Christoph Haag 2017-06-16 22:44:52 UTC
Well, the cause was https://cgit.freedesktop.org/mesa/mesa/commit/?id=81945ded0dc3d25d55eaf682dce220fa4c2de9fe

On the mailing list I saw a v3, but the commit was v2, so maybe something went wrong there: https://lists.freedesktop.org/archives/mesa-dev/2017-June/157919.html
Comment 4 Kai 2017-06-17 07:48:11 UTC
I've hit this issue as well.

(In reply to Emil Velikov from comment #2)
> The following series should do it. Please let me know how if it helps on
> your end.
> 
> https://patchwork.freedesktop.org/series/25934/

This fixes the build failure for me. You can have my
  Tested-by: Kai Wasserbäch <kai@dev.carbon-project.org>
Comment 5 Gregor Münch 2017-06-17 08:52:25 UTC
Tested and confirmed working for the mesa-git and lib32-mesa-git builds. Thx for the quick fix!
Comment 6 Gregor Münch 2017-06-17 11:40:51 UTC
Fixed in Master.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.