src/amd/common/ac_gpu_info.h
@@ -26,6 +26,8 @@
 #ifndef AC_GPU_INFO_H
 #define AC_GPU_INFO_H
 
+#include <stdint.h>
+#include <stdbool.h>
 #include "amd_family.h"
 
 #ifdef __cplusplus
@@ -33,7 +35,7 @@ extern "C" {
 #endif
 
 /* Prior to C11 the following may trigger a typedef redeclaration warning */
-typedef void * amdgpu_device_handle;
+typedef struct amdgpu_device *amdgpu_device_handle;
 struct amdgpu_gpu_info;
 
 struct radeon_info {
